# musings

./: .env.example  .gitignore  .gitmodules  .sops.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.old  README.md  build.sh  config.py  docker-compose.yml  dockerfile  entrypoint.sh  hugo.toml  pyproject.toml  requirements.txt
.claude/commands/: dev.md  docker-build.md  migrate.md  test.md
.github/: release-please-config.json
.github/workflows/: ci.yml  deploy.yml  dev.yml  image.yaml  release-please.yml  release.yml  sync-posts.yml
app/: config.toml  hugo.toml  hugo.yaml  hugo.yaml.bak
app/content/: _index.md  dominion.md  footprints_in_the_sand.md  poems.md  release_the_rhythm.md  roses.md  sandstorm.md  the_last_keeper.md  words_in_motion.md
app/i18n/: en.yaml
app/public/: 404.html  en.search-data.json  index.html  index.xml  sitemap.xml
archetypes/: default.md  notes.md
blog/: __init__.py  config.py  models.py  utils.py
blog/api/: __init__.py  views.py
blog/auth/: __init__.py  views.py
blog/errors/: __init__.py  handlers.py
blog/posts/: __init__.py  forms.py  views.py
blog/templates/: base.html  index.html  post.html
content/notes/: 202601152309.md  202601191659.md  (+1 more)
deploy/: .env.enc  .env.example  docker-compose.yml
development/: build.sh  dev-tmuxp.yaml
nginx/: blog  default  nginx-prod.conf  nginx.conf
scripts/: import_hugo_posts.py  sync_posts.py
terraform/: cloud-init.yaml  main.tf  outputs.tf  remote.enc  terraform.tfvars.example  tfvars.enc  variables.tf
tests/: conftest.py  test_api.py  test_auth.py  test_blog.py
(+98 files in other folders)
