[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musings"
version = "2.0.0-alpha"
description = "A Flask blog by Sean Fontaine"
requires-python = ">=3.13"
dependencies = [
    "Flask==3.1.1",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.1.0",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.2.2",
    "WTForms==3.2.1",
    "psycopg2-binary==2.9.10",
    "gunicorn==23.0.0",
    "mistune==3.1.2",
    "Werkzeug==3.1.3",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-flask==1.3.0",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
include = ["blog*"]

[tool.setuptools.package-data]
"blog" = ["templates/**/*", "static/**/*"]

[tool.ruff]
target-version = "py313"
src = ["blog"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
